add some feature

--- a/src/components/playerInsertion/playerInsertion.css
+++ b/src/components/playerInsertion/playerInsertion.css
@@ -1,4 +1,6 @@
-.guess-container{
+.insert-container {
+    border: 2px solid white;
+    background-color: rgba(253, 249, 249, 0.24);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -6,10 +8,10 @@
     border-radius: 5px;
     font-weight: bold;
     flex-direction: row;
-    
+    padding: 5px;
 }
 
-.guess-container div {
+.insert-container div {
     background-color: rgb(255, 255, 255);
     padding: 8px;
     border-radius: 5px;
@@ -18,13 +20,5 @@
     align-items: center;
     margin: 4px;
     width: 35px;
+    height: 35px;
 }
-
-div.include {
-    background-color: rgb(238, 107, 31);
-}
-
-div.correct {
-    background-color: rgb(91, 223, 146);
-}
-
