--- a/src/components/guessLists/guessList.css
+++ b/src/components/guessLists/guessList.css
@@ -1,7 +1,7 @@
 .container {
     border: 2px solid white;
     border-radius: 10px;
-    background-color: rgba(253, 249, 249, 0.24);
+    background-color: #b2bec3;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -9,7 +9,7 @@
     padding: 10px;
     gap: 10px;
     position: fixed;
-    bottom: 55%;
+    bottom: 45%;
     right: 50%;
     transform: translateX(50%);
 }
