--- a/src/components/loading/loading.css
+++ b/src/components/loading/loading.css
@@ -1,8 +1,8 @@
 .loader {
-    border: 10px solid #ecc206;
+    border: 10px solid #fdcb6e;
     border-radius: 50%;
-    border-top: 10px solid rgb(10, 8, 0);
-    border-bottom: 10px solid rgb(1, 3, 1);
+    border-top: 10px solid #2d3436;
+    border-bottom: 10px solid #2d3436;
     width: 60px;
     height: 60px;
     -webkit-animation: spin 2s linear infinite;
