--- a/src/components/virtualKeyboard/virtualKeyboard.css
+++ b/src/components/virtualKeyboard/virtualKeyboard.css
@@ -6,16 +6,16 @@
 .virtual-keyboard  input{
 padding: 10px 20px;
 border-radius: 30px;
-border: 3px solid #fff;
-background-color: rgb(49, 5, 14);
-color: #fff;
+border: 3px solid #636e72;
+background-color: #dfe6e9;
+color: #636e72;
 cursor: pointer;
 transition: 0.3s;
 font-weight: bold;
 }
 
 .virtual-keyboard input:hover{
-background-color: #fff;
-color: black;
-border: 3px solid rgb(49, 5, 14);
+background-color: #000;
+color: white;
+border: 3px solid white;
 }
