--- a/src/index.css
+++ b/src/index.css
@@ -11,5 +11,5 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(250, 158, 245, 0.705);
+  background-color: #00b894;
 }
